--- a/static/apps.json
+++ b/static/apps.json
@@ -21,7 +21,7 @@
     },
     {
         "title": "Instagram",
-        "img": "./img/apps/gramsta.png",
+        "img": "./img/apps/gramsta.jpg",
         "location": "https://www.instagram.com"
     },
     {
