--- a/static/apps.json
+++ b/static/apps.json
@@ -37,7 +37,7 @@
     {
         "title": "Snapchat",
         "img": "./img/apps/sc.png",
-        "location": "https://accounts.snapchat.com"
+        "location": "https://web.snapchat.com"
     },
     {
         "title": "1movieshd",
